# KG

./: .gitignore  pyproject.toml
data/: football_antology.rdf  football_df.rdf
data/data_lists/: classes  data_prop  obj_prop
notebooks/: download_data.ipynb  parse_public_graphs.ipynb
src/: __init__.py  add_data.py  custom_graph.py  data_structures.py  wrapper.py
