[tool.poetry]
name = "kg"
version = "0.1.0"
description = ""
authors = ["Dmitry Nesmeyanov <miradg99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^7.0.0"
black = "^23.12.0"
isort = "^5.13.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
